Changed Make File

--- a/1/Makefile
+++ b/1/Makefile
@@ -1,7 +1,7 @@
 DB=enceladus
 BUILD=${CURDIR}/build.sql
 SCRIPTS=${CURDIR}/scripts
-CSV='${CURDIR}/../data/master_plan.csv'
+CSV='${CURDIR}C:\Users\jlxfa\OneDrive\cassini_data\curious_data\data\master_plan.csv'
 MASTER=$(SCRIPTS)/import.sql
 NORMALIZE = $(SCRIPTS)/normalize.sql 
 
