Makefile Code Change

--- a/Curious_Moon/Makefile
+++ b/Curious_Moon/Makefile
@@ -4,20 +4,20 @@ ENV_REMOTE = $(CURDIR)/.pgenv.remote
 ENV_LOCAL = $(CURDIR)/.pgenv.local
 CSV_LOCAL = $(CURDIR)/master_plan.csv
 MAIN = $(SCRIPTS)/import.sql
-NORMALIZE = $(SCRIPTS)/normalize
-IMPORT_REMOTE = $(SCRIPTS)/remote_import.sql
+NORMALIZE = $(SCRIPTS)/normalize.sql 
+IMPORT = $(SCRIPTS)/import2.sql
 SHELL := /usr/bin/env bash
 
-all: normalize
-		psql $(DB) -f $(BUILD)
+all:
+	@echo "Error: Please specify remote or local target!"
 
 remote: clean main
-		@cat $(IMPORT_REMOTE) >> $(BUILD)
-		@cat $(NORMALIZE) >> $(BUILD)
-		source $(ENV_REMOTE) && psql -h $${PGHOST} -d $${PGDATABASE} -U $${PGUSER} -f $(BUILD)
-
+	@cat $(IMPORT) >> $(BUILD)
+	@cat $(NORMALIZE) >> $(BUILD)
+	source $(ENV_REMOTE) && psql -h $${PGHOST} -d $${PGDATABASE} -U $${PGUSER} -f $(BUILD)
+	
 local: clean main
-	@cat $(IMPORT_REMOTE) >> $(BUILD)
+	@cat $(IMPORT) >> $(BUILD)
 	@cat $(NORMALIZE) >> $(BUILD)
 	source $(ENV_LOCAL) && psql -h $${PGHOST} -d $${PGDATABASE} -U $${PGUSER} -f $(BUILD)
 
